# attacks-suite

./: .gitignore  Cargo.toml  README.md
classic_sca/: cpa_aes.py  cpa_ecdsa.py  cpa_higher2_aes.py  cpa_higher2_ecdsa.py  dpa_ecdsa.py  template_aes.py  template_ecdsa.py
ml/: model_training.py  model_training_with_cnn.py  predict.py  predict_with_cnn.py
sca_with_signal_processing/: cpa_aes_signal_processing_with_multi_subtraces.py  cpa_aes_with_signal_processing.py  cpa_ecc_with_signal_processing.py  cpa_rsa_with_signal_processing.py
src/: main.rs
src/bip32/: bip32.rs  glitch.rs  mod.rs  stats.rs  timing.rs  timing_attack.rs
src/blind_signing/: attack_blind_signing.rs  classic_contermeasures.rs  mod.rs  signer.rs  transaction.rs  zkp_contermeasures.rs
src/ecdsa/: ecdsa.rs  ecdsa_detect_nonce_collision.rs  ecdsa_recover_private_key.rs  mod.rs
src/fault_attacks_ml/: ml_classifier.rs  ml_secret_recovery.rs  mod.rs  trace.rs
src/post_quantum_cryptography/: mod.rs
src/post_quantum_cryptography/Dilithium/: dilithium.rs  matrix.rs  mod.rs  packing.rs  params.rs  poly.rs  sampling.rs
src/post_quantum_cryptography/Kyber/: kem.rs  mod.rs  ntt.rs  params.rs  poly.rs  sampling.rs
src/post_quantum_cryptography/Sphincs/: fors.rs  hash.rs  merkle.rs  mod.rs  params.rs  prng.rs  sphincs.rs  wots.rs
src/sca_attacks_dl/: ml_attack.rs  mod.rs  trace_generator.rs
