[package]
name = "attacks-project"
version = "0.1.0"
edition = "2021"
authors = ["Tamann"]
description = "Cryptographic attacks: Timing attacks, Glitch, Deep Learning + SCA, Machine Learning + Glitch, Blinding signing,..."
license = "MIT"

[dependencies]
# Cryptography
hmac = "0.12"
sha2 = "0.10"
sha3 = "0.10"
hex-literal = "0.3"
rand = "0.8"
k256 = { version = "0.13", features = ["ecdsa", "arithmetic"] }
num-bigint = "0.4"
num-traits = "0.2"
hex = "0.4"

# For interoperability with Python (deep learning)
pyo3 = { version ="0.20", features = ["auto-initialize"] }

# For time measure
time = "0.3"

# For tests and benchmarks
criterion = { version = "0.5", optional = true }

# For Machine Learning in Rust
smartcore = "0.3.0" 



serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
ark-std = "0.4"
ark-relations = "0.4"
ark-groth16 = "0.4"
ark-bn254 = "0.4"
ark-r1cs-std = "0.4"
ark-snark = "0.4"

[features]
default = []
bench = ["criterion"]

[dev-dependencies]
# For unit tests
assert_approx_eq = "1.1"
